--- a/spring-note/spring-note/pom.xml
+++ b/spring-note/spring-note/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>spring</artifactId>
+    <artifactId>spring-note</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>spring-bean</module>
+        <module>spring-note-bean</module>
     </modules>
     <name>spring</name>
     <packaging>pom</packaging>
@@ -42,6 +42,11 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
@@ -66,6 +71,10 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
         </dependency>
     </dependencies>
 
